bpo-43369: sqlite3_column_{text,blob} failures now raise MemoryError (GH-24723)